--- a/philo/.vscode/settings.json
+++ b/philo/.vscode/settings.json
@@ -57,7 +57,8 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "pthread.h": "c"
+    "pthread.h": "c",
+    "philo.h": "c"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
